# training-asr-nxt

./: .gitignore  LICENSE  Makefile  README.md  requirements.txt
deploy/archyvis/: Makefile
deploy/sprintas/: Makefile
deploy/sprintas/remote_vu_hpc/: Makefile
deploy/vu_hpc/: Makefile
deploy/vu_hpc/docker/: Dockerfile  Makefile
deploy/vu_hpc/remote/: Makefile  run_ssl.sh
deploy/vu_hpc/remote_vietasr/: Makefile.options_rt  Makefile.options_rts
egs/analysis/: Makefile
egs/analysis/local/: calc_file_cuts.py  calc_speaker_selection.py  cluster_analysis.py  copy_audio.py  global_speaker_durations.py  label_gender.py  prepare_speaker_rttm.py  query_global.py  speaker.py  speaker_analysis.py  speaker_cluster_in_file.py  speaker_gender_in_file.py  speaker_in_file.py  speaker_lang_in_file.py
egs/audio_len/: Makefile
egs/audio_len/local/: run.py
egs/augmentation/: Makefile
egs/augmentation/local/: make_wav_list.py  run_one.sh  s3_list_augmentation.py
egs/db/: Makefile  docker-compose.yml
egs/db/local/: make_one_speaker_from_vad.py  move_folder_source.py  source_to_speaker_cluster.py
egs/diarization/: Makefile
egs/diarization/local/: pyannote.py  pyannote_full.py  to_textgrid.py  wrk_pyannote_full.py
egs/gender/: Makefile
egs/gender/local/: detect.py  gender.py  model.py  prepare_train.py  train.py
egs/hubert/: Makefile
egs/hubert/local/: dummy_dict.py  make_wav_list.py  merge_km.py  s3_dwn.py
egs/id_lang/: Makefile
egs/id_lang/local/: id.py  id_speaker.py
egs/sm_detection_ina/: Makefile
egs/sm_detection_ina/local/: run.py  wrk_detect_smn.py
egs/speaker_embeddings/: Makefile
egs/speaker_embeddings/local/: cluster.py  (+3 more)
egs/to_wav/: Makefile
egs/voxlingua/: Makefile
egs/voxpopuli/: Makefile
preparation/: logger.py  run.py
preparation/cache/: file.py
preparation/metadata/: embedding.py
preparation/utils/: audio.py  language.py  rttm.py  sm_segments.py
runner/: Cargo.toml  Makefile  build.rs
runner/src/: db.rs  files.rs  lib.rs  main.rs  utils.rs
runner/src/collect_jsonl/: main.rs
runner/src/data/: errors.rs  mod.rs  structs.rs
runner/src/db_filler/: main.rs
runner/src/db_to_file/: main.rs
runner/src/file_to_db/: main.rs
runner/src/fs_runner/: main.rs
runner/src/runner_wrk/: main.rs
runner/src/snipper/: main.rs
runner/src/snipper/ws/: main.rs
runner/src/utils/: cache.rs  duration.rs  files.rs  mod.rs  snipper.rs  system.rs
runner/src/vad/: main.rs
runner/src/worker/: pipe.rs
runner/src/zipper/: main.rs
(+2 files in other folders)
