[package]
name = "runner"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1.43", features = ["full", "tracing"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
async-trait = "0.1"
chrono = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
tonic-reflection = "0.12"
tempfile = "3.16"
tokio-util = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
thiserror = "1.0"
tonic-health = "0.12"
tokio-retry = "0.3"
tonic-tracing-opentelemetry = "0.24"
walkdir = "2.5"
indicatif = { version = "0.17", features = ["rayon", "tokio"] }
rayon = "1.10.0"
path-absolutize = "3.0"
ansi_term = "0.12"
console = "0.15"
sysinfo = "0.35"
bytesize = "2.0"
zip = "4.3"
jwalk = "0.8"
crossbeam-channel = "0.5.15"

[dev-dependencies]
tracing-test = "0.2"
rstest = "0.25"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "runner"
path = "src/main.rs"

[[bin]]
name = "zipper"
path = "src/zipper/main.rs"
